SQuirreL SQL FX Change Log
==============================

Bug fix: When selection inside a SQL result table is in progress and the mouse pointer is dragged right or left out of the table the table did not scroll.

Removed the maximum Java-VM memory parameter (-Xmx512m) from the Windows start batch. Java should be able to manage its memory itself.

Feature: Search in SQL result table.

Bug fix: Appending an SQL from SQL history to the editor does not add a new line anymore if the editor is empty.

Improved Object tree performance: Details tabs are now loaded on demand.

Bug fix: Tools popup and bookmarks popup didn't scroll right when up or down key was used.

Feature: Alias name in SQL history search dialog.

Upgraded RichTextFX to version 0.6.6 and fixed the code completion problem that resulted from changes in RichTextFX, see some paragraphs below.
  Note: This makes SQuirreL FX compatible with jdk1.8.0_60.

Bug fix: When an area of a result table was selected that exceeded valid columns, a NullPointerException occurred when any table copy function was executed.

Bug fix: File handling now remembers the last directory.

Bug fix: Fixed memory leak concerning toolbar buttons.
  Excerpt from Steven Zecks mail announcing the problem:
  "Part of the problem now is the ToolbarButtonsHandler from commit 54d130.
  I used the ActionUtils/ActionManager/ActionHandle classes to manage the rerun SQL button and action in the results tab ...
  But now when the results tab is closed and/or rerun, the _buttons list in ToolbarButtonsHandler isn't cleared, causing a memory leak."

Feature: File save, open etc. in SQL editor.

Feature: Toolbar buttons and menus that have Session wide concern (e.g. transaction buttons or schema reload button)
   are now automatically available in a Session's main tab as well as in additional SQL tabs.

Feature: Rerun current open results tab (ctrl+shift+enter) or using icon

Bug fix: Wrong messages when transactions where committed/rollbacked.
