@@ -7,11 +7,11 @@
 <?import javafx.scene.paint.*?>
 <?scenebuilder-preview-i18n-resource i18n.properties?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="379.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/8.0.45" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.squirrelsql.settings.GeneralView">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="601.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.squirrelsql.settings.GeneralView">
   <children>
     <CheckBox fx:id="chkMultibleLinesInCells" layoutX="14.0" layoutY="15.0" mnemonicParsing="false" text="%multiline.display.explanation" />
     <CheckBox fx:id="chkLimitRowsByDefault" layoutX="14.0" layoutY="49.0" mnemonicParsing="false" prefWidth="246.0" text="%limit.result.rows.default" />
-    <TextField fx:id="txtLimitRowsDefault" layoutX="255.0" layoutY="46.0" prefHeight="25.0" prefWidth="91.0" />
+    <TextField fx:id="txtLimitRowsDefault" layoutX="255.0" layoutY="46.0" prefHeight="26.0" prefWidth="81.0" />
     <Label layoutX="358.0" layoutY="49.0" text="%limit.result.rows.default.to.rows" />
     <AnchorPane fx:id="apProperties" layoutX="14.0" layoutY="123.0" prefHeight="202.0" prefWidth="573.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
       <children>
@@ -25,5 +25,7 @@
     </AnchorPane>
       <Label layoutX="15.0" layoutY="84.0" prefHeight="15.0" prefWidth="158.0" text="%showSettings.statement.separator" />
       <TextField fx:id="txtStatementSeparator" layoutX="173.0" layoutY="79.0" prefHeight="25.0" prefWidth="81.0" />
+      <Label layoutX="14.0" layoutY="344.0" prefHeight="16.0" prefWidth="215.0" text="%showSettings.open.result.tabs.limit" />
+      <TextField fx:id="txtResultTabsLimit" layoutX="246.0" layoutY="339.0" prefHeight="26.0" prefWidth="81.0" />
   </children>
 </AnchorPane>
