@@ -60,3 +60,5 @@ reformat.tab.title=Reformat SQL
 keyword.behavior.alone.in.line=Alone in line
 keyword.behavior.start.new.line=Start new line
 keyword.behavior.no.influence.on.line.break=No influence on line break
+
+showSettings.open.result.tabs.limit=Limit open SQL result tabs to:
